style(general): made styles more specific to each page to prevent style bleed

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 nav {
-	height: 30px;
+	height: 2rem;
 }
 
 nav > ul {
